Sammy init repo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul id="menu" class="hide-menu">
                 <li><a href="#start">Start</a></li>
                 <li><a href="#linda">Linda</a></li>
-                <li><a href="#member1">Member 1</a></li>
+                <li><a href="./sammy">Sammy</a></li>
                 <li><a href="#member2">Member 2</a></li>
                 <li><a href="#member3">Member 3</a></li>
                 <li><a href="#member4">Member 4</a></li>
