Sammy #comment fixed the pr with Linda's additions

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul id="menu" class="hide-menu">
                 <li><a href="#start">Start</a></li>
                 <li><a href="#linda">Linda</a></li>
-                <li><a href="./sammy">Sammy</a></li>
+                <li><a href="#sammy">Sammy</a></li>
                 <li><a href="#member2">Member 2</a></li>
                 <li><a href="#member3">Member 3</a></li>
                 <li><a href="#member4">Member 4</a></li>
@@ -43,7 +43,11 @@
     <main>
         <section id="start"></section>
         <section id="linda"></section>
-        <section id="member1"></section>
+        <section id="sammy">
+            <form action="./sammy/" method='get'>
+                <input class="redirectButton" type="submit" value="Go to Sammy's page" />
+            </form>
+        </section>
         <section id="member2"></section>
         <section id="member3"></section>
         <section id="member4"></section>
