--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <input class="redirectButton" type="submit" value="Go to Sammy's page" />
             </form>
         </section>
+        <section id="linda">
+            <a href="./linda/linda.html">Linda</a>
+        </section>
         <section id="member2"></section>
         <section id="member3"></section>
         <section id="member4"></section>
