added header to index.html and style in style.css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <title>Basic Webpage</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>FreeCodeCamp Berlin Fun GitHub Project</h1>
+    </header>
     <nav id="nav" role="navigation">
         <div id="div-burger-container">
         <!-- gave spans individual classes instead of IDs for 
