--- a/sammy/index.html
+++ b/sammy/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Sammy Shehter</title>
-</head>
-<body>
-    <h1 class="helloMessage">Hello World ^^</h1>
-    <script src="./main.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./style.css" />
+        <title>Sammy Shehter</title>
+    </head>
+    <body>
+        <div class="flip">
+            <div class="flip_card">
+                <div class="flip_card_front">
+                    <div class="flip_card_front_photo"></div>
+                    <h2>Sammy Shehter</h2>
+                    <p>text</p>
+                </div>
+                <div class="flip_card_back">
+                    <h2>Sammy Shehter</h2>
+                    <p>text</p>
+                    <ul class="social">
+                        <li class="instagram">
+                            <a href="#">
+                                <i class="fab fa-instagram"> </i>
+                            </a>
+                        </li>
+                        <li class="facebook">
+                            <a href="#">
+                                <i class="fab fa-facebook-f"> </i>
+                            </a>
+                        </li>
+                        <li class="youtube">
+                            <a href="#">
+                                <i class="fab fa-youtube"> </i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <script src="./main.js"></script>
+    </body>
 </html>
