--- a/index.html
+++ b/index.html
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="a simple one page website, mobile first, responsive, accessible, performant">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Linda and ...">
-            <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="a simple one page website, mobile first, responsive, accessible, performant"
+    />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="author" content="Linda and ..." />
+    <link rel="stylesheet" href="style.css" />
     <!-- <link rel="icon" type="image/png" sizes="120x120" href="">
     <link rel="apple-touch-icon" sizes="222x222" href="">
      -->
     <title>Basic Webpage</title>
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
     <nav id="nav" role="navigation">
-        <div id="div-burger-container">
+      <div id="div-burger-container">
         <!-- gave spans individual classes instead of IDs for 
             specificity, so toggling class close-menu with js 
             works -->
-            <div id="stripes">
-                <span class="burger-stripe menu-closed stripe1"></span>
-                <span class="burger-stripe menu-closed stripe2"></span>
-                <span class="burger-stripe menu-closed stripe3"></span>
-            </div>
-            <button id="btn-open-menu" onclick="toggleMenu()" 
-            aria-label="open menu" aria-pressed="false"></button>
+        <div id="stripes">
+          <span class="burger-stripe menu-closed stripe1"></span>
+          <span class="burger-stripe menu-closed stripe2"></span>
+          <span class="burger-stripe menu-closed stripe3"></span>
         </div>
-        <div id="hidden">
-            <ul id="menu" class="hide-menu">
-                <li><a href="#start">Start</a></li>
-                <li><a href="#linda">Linda</a></li>
-                <!-- replace of of the "member" links with your name here in this menu,
+        <button
+          id="btn-open-menu"
+          onclick="toggleMenu()"
+          aria-label="open menu"
+          aria-pressed="false"
+        ></button>
+      </div>
+      <div id="hidden">
+        <ul id="menu" class="hide-menu">
+          <li><a href="#start">Start</a></li>
+          <li><a href="#linda">Linda</a></li>
+          <!-- replace of of the "member" links with your name here in this menu,
                 and also in the section in this file where the link used to lead to 
                 (e.g. <a href="#member1" leads to section id="member1"). Then create a 
                 link inside the section leading to your html in a folder with your name  -->
-                <li><a href="#sammy">Sammy</a></li>
-                <li><a href="#member2">Member 2</a></li>
-                <li><a href="#member3">Member 3</a></li>
-                <li><a href="#member4">Member 4</a></li>
-                <li><a href="#member5">Member 5</a></li>
-            </ul>
-        </div>
+          <li><a href="#sammy">Sammy</a></li>
+          <li><a href="./stefano/stefano.html">Stefano</a></li>
+          <li><a href="#member3">Member 3</a></li>
+          <li><a href="#member4">Member 4</a></li>
+          <li><a href="#member5">Member 5</a></li>
+        </ul>
+      </div>
     </nav>
     <main>
-        <section id="start"></section>
-        <section id="linda"></section>
-        <section id="sammy">
-            <form action="./sammy/" method='get'>
-                <input class="redirectButton" type="submit" value="Go to Sammy's page" />
-            </form>
-        </section>
-        <section id="linda">
-            <a href="./linda/linda.html">Linda</a>
-        </section>
-        <section id="member2"></section>
-        <section id="member3"></section>
-        <section id="member4"></section>
-        <section id="member5"></section>
+      <section id="start"></section>
+      <section id="linda"></section>
+      <section id="sammy">
+        <form action="./sammy/" method="get">
+          <input
+            class="redirectButton"
+            type="submit"
+            value="Go to Sammy's page"
+          />
+        </form>
+      </section>
+      <section id="linda">
+        <a href="./linda/linda.html">Linda</a>
+      </section>
+      <section id="member2"></section>
+      <section id="member3"></section>
+      <section id="member4"></section>
+      <section id="member5"></section>
     </main>
     <footer></footer>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
