fix link from index.html to stefanos page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 (e.g. <a href="#member1" leads to section id="member1"). Then create a 
                 link inside the section leading to your html in a folder with your name  -->
           <li><a href="#sammy">Sammy</a></li>
-          <li><a href="./stefano/stefano.html">Stefano</a></li>
+          <li><a href="#stefano">Stefano</a></li>
           <li><a href="#member3">Member 3</a></li>
           <li><a href="#member4">Member 4</a></li>
           <li><a href="#member5">Member 5</a></li>
@@ -66,7 +66,9 @@
       <section id="linda">
         <a href="./linda/linda.html">Linda</a>
       </section>
-      <section id="member2"></section>
+      <section id="stefano">
+        <a href="./linda/linda.html">Linda</a>
+      </section>
       <section id="member3"></section>
       <section id="member4"></section>
       <section id="member5"></section>
