--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <title>Basic Webpage</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>freeCodeCamp Berlin Fun GitHub Project</h1>
+    </header>
     <nav id="nav" role="navigation">
         <div id="div-burger-container">
         <!-- gave spans individual classes instead of IDs for 
@@ -37,7 +39,7 @@
                 (e.g. <a href="#member1" leads to section id="member1"). Then create a 
                 link inside the section leading to your html in a folder with your name  -->
                 <li><a href="#sammy">Sammy</a></li>
-                <li><a href="#member2">Member 2</a></li>
+                <li><a href="#holger">Holger</a></li>
                 <li><a href="#member3">Member 3</a></li>
                 <li><a href="#member4">Member 4</a></li>
                 <li><a href="#member5">Member 5</a></li>
@@ -55,7 +57,7 @@
         <section id="linda">
             <a href="./linda/linda.html">Linda</a>
         </section>
-        <section id="member2"></section>
+        <section id="holger"><a href="./holger/holger.html">Holger's page</a></section>
         <section id="member3"></section>
         <section id="member4"></section>
         <section id="member5"></section>
