--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a href="./linda/linda.html">Linda</a>
       </section>
       <section id="stefano">
-        <a href="./linda/linda.html">Linda</a>
+        <a href="./stefano/stefano.html">Stefano</a>
       </section>
       <section id="member3"></section>
       <section id="member4"></section>
