--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <a href="./linda/linda.html">Linda</a>
             </section>
             <section id="sammy">
-                <a href="./sammy">Sammy</a>
+                <a href="./sammy/index.html">Sammy</a>
             </section>
             <section id="holger">
                 <a href="./holger/holger.html">Holger's page</a>
